<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rabbit</string>
    <string name="title_section1">收件箱</string>
    <string name="title_section2">好友</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login_btn_label">登录</string>
    <string name="signup_text_label">注册</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="email_text_label">邮箱</string>
    <string name="signup_btn_label">注册</string>
    <string name="signup_error_message">用户名、密码和邮箱都需要填写</string>
    <string name="signup_error_title">信息不全哦</string>
    <string name="login_error_message">用户名、密码都需要填写</string>
    <string name="login_error_title">信息不全哦</string>
    <string name="menu_logout_label">退出</string>
    <string name="empty_inbox_label">没有新消息</string>
    <string name="empty_friends_label">目前还没有好友，快添加好友吧!</string>
    <string name="menu_edit_friends_label">编辑好友</string>
    <string name="title_activity_edit_friends">EditFriendsActivity</string>
    <string name="error_title">对不起！</string>

</resources>
